# WhateverGame

./: .gitignore  .gitmodules  CMakeLists.txt  CompileLinux.sh  CompileWindows.bat  readme.md  requirements-linux.txt
assets/: resources.yaml
assets/layouts/: index.md  main_menu_layout.yaml
include/: Player.hpp
lib/pkgconfig/: sfml-all.pc  sfml-audio.pc  sfml-graphics.pc  sfml-network.pc  sfml-system.pc  sfml-window.pc
source/: Menu.cpp  Menu.hpp  Player.cpp  Player.hpp  client.cpp  main.cpp  server.cpp
source/engine/: command.h  engine_common.h  entry_point.cpp  fire_command.cpp  game_state.cpp  game_state.h  input_handler.cpp  input_handler.h  input_manager.cpp  input_manager.h  jump_command.cpp  move_command.cpp  network_event.h  network_manager.cpp  network_manager.h  play_state.cpp  play_state.h  resource_manager.cpp  resource_manager.h  state_manager.cpp  state_manager.h  utils.cpp  utils.h  whatever_engine.cpp  whatever_engine.h
source/engine/GUI/: blocks.cpp  blocks.h  gui_common.h  page.cpp  page.h
source/engine/caches/: font_cache.cpp  font_cache.hpp  texture_cache.cpp  texture_cache.hpp
source/engine/commands/: command.cpp  command.h  fire_command.cpp  fire_command.h
source/engine/commands/actions/: action.h  fire_action.cpp  fire_sound_action.cpp  walk_action.cpp
source/engine/game_members/: gameobject.cpp  gameobject.h  player.cpp  player.h  projectile.cpp  projectile.h  wall.cpp  wall.h
source/engine/network/: broadcaster.h  network_common.h  sniffer.h  thread_safe_queue.h  udp_client.h  udp_server.h
source/game/: Player.hpp  main.cpp
source/game/states/: main_menu_state.h  play_state.cpp  play_state.h  temp_gui.h
source/network/: async_client.cpp  async_client.h  async_server.cpp  async_server.h  broadcaster.h  common.h  network_components.h  sniffer.h  thread_safe_queue.h  udp_client.h  udp_server.h
source/network/network/: broadcaster.h  common.h  udp_client.h  udp_server.h
source/server/: WhateverServer.cpp  WhateverServer.h  server_entry_point.cpp  whatever_server.cpp  whatever_server.h
source/states/: play_state.cpp  play_state.h
